# ttyd-mod-manager

./: .gitignore  Cargo.toml
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/interop/: Cargo.toml
crates/interop/src/: ctype.rs  dumper.rs  lib.rs  reader.rs  size.rs
crates/interop_derive/: Cargo.toml
crates/interop_derive/src/: attrs.rs  lib.rs  num.rs
crates/ppcdis/: Cargo.toml  test.yml  tests_to_do
crates/ppcdis/src/: insn.rs  lib.rs  rel.rs
crates/templated/: Cargo.toml
crates/templated/src/: lib.rs
include/: evt.h  memory.h
include/dolphin/: gx.h
include/drv/: camdrv.h
include/evt/: evt_fade.h  evt_map.h  evt_npc.h  evt_snd.h  evt_unsorted.h
include/mario/: mariost.h
include/mgr/: evtmgr.h  evtmgr_cmd.h
src/: bpatch.rs  clsdata.rs  code.rs  dol.rs  error.rs  evt.rs  gen.rs  main.rs  msg.rs  reader.rs  rel.rs  sym.rs  utils.rs
src/code/: mod.rs  sigs.rs
src/code/sigs/: aaa.rs  mod.rs
