[package]
name = "ttyd-mod-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytemuck = { version = "1.14.3", features = ["derive"] }
clap = { version = "4.4.0", features = ["derive"] }
csv = "1.3.0"
encoding_rs = "0.8.33"
enum-utils = "0.1.2"
num = "0.4.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"

error = { path = "./crates/error" }
interop = { path = "./crates/interop", features = ["derive"] }
ppcdis = { path = "./crates/ppcdis" }
templated = { path = "./crates/templated" }

[features]
spm = []
